packagekit: fix misaligned spinner
Fixes #15344

--- a/pkg/packagekit/updates.scss
+++ b/pkg/packagekit/updates.scss
@@ -209,6 +209,11 @@ div.changelog {
     margin: 1em auto;
 }
 
+/* Add some space betweent the spinner and the text */
+.progress-description > svg {
+    margin-right: var(--pf-global--spacer--sm);
+}
+
 /* stolen from pkg/systemd/overview.scss */
 .content-header-extra {
     background: #f5f5f5;
